--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "build",
             "type": "shell",
-            "command": "zig build"
+            "command": "~/dev/zig-dev/build/stage3/bin/zig build"
         }
     ]
 }
